--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<!-- form -->
   <div class="container bmi-wrapper d-flex">
     <div class="bmi-container">
         <h2 class="text-center mb-4">BMI Calculator</h2>
